nesc-frontend/src/test/resources/integration/programs/bad/bad30/C.nc
/* Invalid non-type argument for component (char[]). */

configuration C
{
}
implementation
{
   components new M(20), N;
   M.print -> N;
}
